envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8800
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:    
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
              - name: local_service
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/hello-envoy"
                    route:
                      cluster: api_backend
                  - match:
                      prefix: "/actuator/health"
                    route:
                      cluster: api_health
          http_filters:
            - name: envoy.filters.http.router
              typed_config: { }
  clusters:
  - name: api_backend
    connect_timeout: 100s
    # type: STATIC
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    circuit_breakers:
     thresholds:
      - priority: "DEFAULT"
        max_connections: 75
        max_pending_requests: 100
        max_requests: 175
    load_assignment:
      cluster_name: api_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app
                port_value: 8080
  - name: api_health
    connect_timeout: 0.25s
    # type: STATIC
    type: STRICT_DNS
    # type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: api_health
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app
                port_value: 8080
 
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
